<resources>
    <string name="app_name">Assignments</string>
    <string name="homeButton">H O M E</string>
    <string name="startButton">START</string>
    <string name="pauseButton">PAUSE</string>
    <string name="stopButton">STOP</string>
    <string name="resetButton">RESET</string>
    <string name="startServiceButton">START SERVICE</string>
    <string name="stopServiceButton">STOP SERVICE</string>
    <string name="inFeet">Feet</string>
    <string name="inInches">Inches</string>
    <string name="minutes">How Many Minutes</string>
    <string name="countdownTime">1</string>
    <string name="serviceButton">Service 1</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">Android Apps for Gervan Nantel</string>
    <string name="my_to_do">My To DO</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="my_timer">My Timer</string>
    <string name="my_big_button">My Big Button</string>
    <string name="stop_watch">Stop Watch</string>
    <string name="my_height">My Height</string>
    <string name="tbd">TBD</string>
    <string name="my_calc">My Calc</string>
</resources>