<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Chronometer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/counter_text"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="37dp"
        android:layout_toEndOf="@+id/stop_button"
        android:textAlignment="center"
        android:textSize="50sp" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="79dp"
        android:onClick="onClickStart"
        android:text="@string/startButton"
        android:textColor="#4CAF50"
        android:textStyle="bold" />

    <Button
        android:id="@+id/stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="143dp"
        android:onClick="onClickStop"
        android:text="@string/stopButton"
        android:textColor="#F44336"
        android:textStyle="bold" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="212dp"
        android:onClick="onClickReset"
        android:text="@string/resetButton"
        android:textColor="#3F51B5"
        android:textStyle="bold" />

    <Button
        android:id="@+id/home_button"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="141dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="44dp"
        android:text="@string/homeButton"
        android:textColor="#F40505"
        android:textStyle="bold" />

</RelativeLayout>