<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Timer">

    <TextView
        android:id="@+id/instructions"
        android:layout_width="211dp"
        android:layout_height="35dp"
        android:layout_above="@+id/counter_text"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="140dp"
        android:layout_toStartOf="@+id/my_time_input"
        android:text="@string/how_many_minutes"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/my_time_input"
        android:layout_width="85dp"
        android:layout_height="50dp"
        android:layout_above="@+id/counter_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="153dp"
        android:hint="@string/countdownTime"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="@string/countdownTime"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/counter_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="0:00"
        android:textSize="50sp"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/counter_text"
        android:layout_centerHorizontal="true"
        android:text="@string/startButton"
        android:textColor="#4CAF50"
        android:textStyle="bold" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_button"
        android:layout_centerHorizontal="true"
        android:text="@string/resetButton"
        android:textColor="#3F51B5"
        android:textStyle="bold"
        android:visibility="invisible"
        tools:visibility="visible" />

    <Button
        android:id="@+id/home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reset_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="140dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="30dp"
        android:text="H O M E"
        android:textColor="#F40505"
        android:textStyle="bold" />

</RelativeLayout>